--- a/contacts.html
+++ b/contacts.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=8"> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Контакты</title>
 <!-- CSS STYLES -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <!-- <link rel="stylesheet" href="css/owl.theme.default.css"> -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
 <!-- CSS STYLES END -->
 <!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
   </head>
@@ -22,7 +23,13 @@
               <li><a href="index.html">Главная</a></li>
               <li><a href="gallery.html">Галерея</a></li>
               <li class="active"><a href="#">Контакты</a></li>
-              <li><a href="menu.html">Меню</a></li>
+              <li><a href="rezerv.html">Заказ столика</a></li>
+              <li><a href="menu.html">Информация</a>
+                <ul class="subMenu">
+                  <li><a href="menu.html#about">О нас</a></li>
+                  <li><a href="menu.html#menu">Меню</a></li>
+                </ul>
+              </li>
             </ul>
           </nav>
         </div>
@@ -51,20 +58,6 @@
           </div>
         <!-- </div> -->
       </section>
-      <!-- <section id="left_menu" class="left_menu">
-        <div class="left_menu_head">
-          Фильтр
-        </div>
-        <div class="left_menu_list">
-          <nav>
-            <ul>
-              <li><a class="act" href="#">Греческая кухня</a></li>
-              <li><a href="#">Итальянская кухня</a></li>
-              <li><a href="#">Украинская кухня</a></li>
-            </ul>
-          </nav>
-        </div>
-      </section> -->
 <!-- Main section -->
 
       <section id="content">
@@ -76,20 +69,14 @@
         <div class="some_content">
             <h3>Наши контакты</h3>
             <div class="gallery">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1797.4474852816775!2d30.542486476613053!3d50.4229495524852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1484679331782" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.6121714112837!2d30.534390351198972!3d50.42969709664054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf0fa5f3c469%3A0xeabdd2dc20bc4a10!2z0LHRg9C70YzQstCw0YAg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwg0JrQuNGX0LI!5e0!3m2!1sru!2sua!4v1485336116240" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
               <div class="conts">
                 <p>Наш адрес: Бульвар Леси Украинки 30</p>
                 <p>Время работы: Круглосуточно</p>
-                <p>Телефоны: +228322228</p>
-                <p>+228322228</p>
+                <p>Телефон: +228322228</p>
                 <p>email: restoran@restoran.com</p>
               </div>
             </div>
-            <!-- paggination -->
-            <div class="paggination">
-              <a href="#"></a>
-            </div>
-            <!-- paggination End-->
         </div>
       </section>
   <!-- Main section End -->
@@ -102,13 +89,18 @@
             </div>
             <div class="mySocMedia">
               <div class="facebook">
-                <a href="https://www.facebook.com/egor.muhladi" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                <a href="#" onclick="this.href='http://www.facebook.com/share.php?u='+window.location.href+window.location.hash" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+              </div>
+              <div class="vk">
+                <a href="#"
+     onclick="this.href='https://vk.com/share.php?url='+window.location.href+window.location.hash+'&title='+document.title" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
               </div>
               <div class="linkedin">
                 <a href="https://www.linkedin.com/in/yehor-mukhladi-0a9161107/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
               </div>
-              <div class="GitHub">
-                <a href="https://github.com/Spean92" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+              <div class="twitter">
+                <a href="#"
+     onclick="this.href='http://twitter.com/timeline/home?status='+document.title+'%20'+window.location.href+window.location.hash" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </div>
             </div>
           </div>
