--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Restaurant</title>
 <!-- CSS STYLES -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <!-- <link rel="stylesheet" href="css/owl.theme.default.css"> -->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
 <!-- CSS STYLES END -->
 <!--[if lt IE 9]>
 <script src="js/html5.js"></script>
@@ -25,11 +26,11 @@
               <li class="active"><a href="#">Главная</a></li>
               <li><a href="gallery.html">Галерея</a></li>
               <li><a href="contacts.html">Контакты</a></li>
-              <li><a href="menu.html">Меню</a>
+              <li><a href="rezerv.html">Заказ столика</a></li>
+              <li><a href="menu.html">Информация</a>
                 <ul class="subMenu">
-                  <li><a href="menu.html">Греческая кухня</a></li>
-                  <li><a href="menu.html">Итальянская кухня</a></li>
-                  <li><a href="menu.html">Украинская кухня</a></li>
+                  <li><a href="menu.html#about">О нас</a></li>
+                  <li><a href="menu.html#menu">Меню</a></li>
                 </ul>
               </li>
             </ul>
@@ -60,28 +61,9 @@
           </div>
         <!-- </div> -->
       </section>
-      <!-- <section id="left_menu" class="left_menu">
-        <div class="left_menu_head">
-          Фильтр
-        </div>
-        <div class="left_menu_list">
-          <nav>
-            <ul>
-              <li><a class="act" href="#">Греческая кухня</a></li>
-              <li><a href="#">Итальянская кухня</a></li>
-              <li><a href="#">Украинская кухня</a></li>
-            </ul>
-          </nav>
-        </div>
-      </section> -->
 <!-- Main section -->
 
       <section id="content">
-        <!-- Breadcrums -->
-        <div class="breadcrums">
-          <!-- <a href="#">Главная</a>&nbsp;/&nbsp;<a href="#">Вторая</a> -->
-        </div>
-        <!-- Breadcrums End-->
         <div class="some_content">
             <h3>У нас самая разнообразная кухня!</h3>
             <div class="gallery">
@@ -89,7 +71,7 @@
                 <div class="pic">
                   <div class="">
                     <div class="img">
-                      <img src="img/ukraine.jpg" alt="">
+                      <img src="img/menu/ukraine.jpg" alt="">
                     </div>
                   </div>
                 </div>
@@ -101,7 +83,7 @@
                 <div class="pic">
                   <div class="">
                     <div class="img">
-                      <img src="img/greece.jpg" alt="">
+                      <img src="img/menu/greece.jpg" alt="">
                     </div>
                   </div>
                 </div>
@@ -113,7 +95,7 @@
                 <div class="pic">
                   <div class="">
                     <div class="img">
-                      <img src="img/italy.jpg" alt="">
+                      <img src="img/menu/italy.jpg" alt="">
                     </div>
                   </div>
                 </div>
@@ -139,13 +121,18 @@
           </div>
           <div class="mySocMedia">
             <div class="facebook">
-              <a href="https://www.facebook.com/egor.muhladi" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+              <a href="#" onclick="this.href='http://www.facebook.com/share.php?u='+window.location.href+window.location.hash" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+            </div>
+            <div class="vk">
+              <a href="#"
+   onclick="this.href='https://vk.com/share.php?url='+window.location.href+window.location.hash+'&title='+document.title" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
             </div>
             <div class="linkedin">
               <a href="https://www.linkedin.com/in/yehor-mukhladi-0a9161107/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
             </div>
-            <div class="GitHub">
-              <a href="https://github.com/Spean92" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+            <div class="twitter">
+              <a href="#"
+   onclick="this.href='http://twitter.com/timeline/home?status='+document.title+'%20'+window.location.href+window.location.hash" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
